# job-sentinel

./: .env  .env.example  .gitignore  AI_AGENTS_STATUS.md  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CLOUD_AI_QUICK.md  COMMAND_CENTER.md  COMPLETE.md  DASHBOARD_UPGRADE.md  DOCKER_BUILD.md  DOC_INDEX.md  Dockerfile  EXECUTION_PLAN_CONTRACT_AUDIT.md  FEATURES.md  FINAL_SUMMARY.md  FIXES_APPLIED.txt  FIXES_SUMMARY.md  PHASE_1_CHECKLIST.md  README.md  README_AGENTS.md  RELIABILITY_ENHANCEMENTS.md  REPORT.md  SETUP.md  SUMMARY.md  SYSTEM_STATUS.md  USAGE_GUIDE.md  VERIFICATION_REPORT.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
agents/: ai_engine.py  assistant.py  profile_store.py
backend/: bridge.py  execution_pipeline.py  test_action_executor.py  test_application_session_layer.py  test_application_understanding_activation.py  test_browser_adapter.py  test_dynamic_question_engine.py  test_end_to_end_execution.py  test_execution_engine.py  test_integration.py  test_linkedin_detection.py  test_linkedin_end_to_end.py  test_linkedin_execution.py  test_linkedin_plan_generation.py  test_linkedin_question_integration.py  test_multi_page_workflow.py  test_page_data_producer.py  test_phase2_validation.py  test_playwright_adapter.py  test_recovery_engine.py  test_resume_upload.py  test_workflow_aware_runtime.py  test_workflow_classification.py  test_workflow_integration.py  workflow_classification.py
configs/: profile.yaml  settings.yaml
core/: ai_engine.py  browser.py  config.py  controller.py  emailer.py  limiter.py  logger.py  platform_registry.py  (+4 more)
(+264 files in other folders)
